<resources>
    <string name="app_name" translatable="false">Online Gebeya</string>
    <string name="base_url" translatable="false">https://gebeya.up.railway.app/</string>
    <!--    <string name="base_url" translatable="false">https://gebeya.loca.lt/</string>-->

    <string name="language">Language</string>
    <string name="price_in_ethio">%1$.2f ETB</string>

    <string name="amharic" translatable="false">አማርኛ</string>
    <string name="english" translatable="false">English</string>

    <!-- for field   -->
    <string name="firstName" translatable="false">firstName</string>
    <string name="lastName" translatable="false">lastName</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>
    <string name="passwordConfirmation" translatable="false">passwordConfirmation</string>
    <string name="currentPassword" translatable="false">currentPassword</string>

    <string name="lbl_eql" translatable="false">=</string>
    <string name="lbl_times" translatable="false">*</string>

    <!--  lbl  /-->
    <string name="password_instruction">Enter the email associated with your account and we\'ll send account reset instruction to your email.</string>
    <string name="unlock_instruction">Enter the email associated with your account and we\'ll send account unlock instruction to your email.</string>
    <string name="confirm_instruction">Enter the email associated with your account and we\'ll send account confirmation link to your email.</string>

    <!--  MESSAGES  -->
    <string name="invalid">Invalid</string>
    <string name="required">Required</string>
    <string name="msg_connection_error">Connection Error</string>
    <string name="msg_not_connected">You are not connected to internet. Please connect to internet to proceed further.</string>

    <!--  LABELS   -->
    <string name="btn_connect">Connect</string>
    <string name="btn_cancel">Cancel</string>
    <string name="content_description" translatable="false">Content description</string>

    <string name="lbl_home">Home</string>
    <string name="lbl_carts">Carts</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_recommended">Recommended Products</string>
    <string name="lbl_see_all">See all</string>
    <string name="settings">Settings</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="password_error"><![CDATA[Length must be >5]]></string>
    <string name="don_t_match">Do not match</string>

    <!-- Sync Preferences -->
    <string name="categories">Categories</string>
    <string name="app_pref">Application</string>
    <string name="night_mode">Night Mode</string>
    <string name="font_size_msg">Font size for text description of product.</string>
    <string name="font_size">Font Size</string>
    <string name="clear_carts">Clear</string>
    <string name="lbl_rate">Rate</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="sign_in">Sign In</string>
    <string name="nav_header_title">Guest-User</string>
    <string name="nav_header_subtitle">Sign-in to continue</string>
    <string name="query_text">Enter product/brand name</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_password_confirmation">Password Confirmation</string>
    <string name="sign_up">Sign Up</string>
    <string name="lbl_unlock">Unlock Account</string>
    <string name="msg_account_locked">Account locked?</string>
    <string name="or">OR</string>
    <string name="msg_sign_in_to_continue">Sign in to continue</string>
    <string name="msg_welcome">Welcome</string>
    <string name="btn_send">Send</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="auto" translatable="false">auto</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="lbl_related_products">Related Products</string>
    <string name="feedback_msg">Please provide your feedback here</string>
    <string name="terms_and_condition">By signing up, you\'re agree to our <a href="https://gebeya.up.railway.app/terms">Terms &amp; Conditions</a> and <a href="https://gebeya.up.railway.app/privacy_policy"> Privacy Policy.</a> </string>
    <string name="lbl_confirm">Confirm Account</string>
    <string name="trending">Trending</string>
    <string name="location">Location</string>
    <string name="lbl_rates">Rates</string>
    <string name="lbl_origin">Origin</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_price">Price</string>
    <string name="app_play_store_url" translatable="false" />
    <string name="send_to" translatable="false">Send To</string>

    <!--Pref-->

    <string name="checkout">Checkout</string>
    <string name="others">Others</string>

    <string name="instruction_sent">Instruction Sent</string>
    <string name="lbl_settings">Settings</string>
    <string name="ope_email">Open Email</string>
    <string name="confirm_later">Skip, I\'ll check later</string>
    <string name="msg_check_ur_email">Check your email</string>

    <string name="msg_account_confirmed">Account not confirmed?</string>
    <string name="save_changes">Update</string>
    <string name="lbl_current_password">Current Password</string>
    <string name="lbl_new_password">New Password (Optional)</string>
    <string name="lbl_new_password_confirmation">Password Confirmation (Optional)</string>
    <string name="lbl_email_opt">Email (Optional)</string>
    <string name="rate_this_product">Rate this product</string>
    <string name="write_comment">Write comment ..</string>
    <string name="submit">Submit</string>
    <string name="rating_and_review">Rating and reviews</string>
    <string name="lbl_orders">Orders</string>
    <string name="lbl_shop">Shop</string>
    <string name="lbl_update">Update</string>
    <string name="lbl_total">Total : </string>
    <string name="lbl_order">Order</string>
    <string name="lbl_pay">Pay</string>

    <string name="lbl_change">Change</string>
    <string name="lbl_new_password_req">New password</string>
    <string name="lbl_confirm_new_password">Confirm new password</string>
    <string name="lbl_password_change">Password change</string>
    <string name="lbl_profile">Profile</string>
    <string name="lb_delete_account">Delete account</string>
    <string name="are_u_sure">Please enter your password.</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_attention">Attention!!</string>
    <string name="lbl_attention_msg">This is not reversible process. Once you delete, your account will be deleted forever.</string>
    <string name="current_pwd_helper">We need your current password to confirm your changes.</string>
    <string name="lbl_leave_blank_if_you_dont_want_it">Leave blank if you don\'t want to change it</string>

    <string name="paid">Paid</string>
    <string name="lbl_balance">Wallet</string>
    <string name="clear_search_history">Clear history</string>
    <string name="balance">Balance: </string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="automatic">Automatic</string>

    <string name="order_items">Order Items</string>
</resources>
