<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/app_pref">

        <ListPreference
            app:defaultValue="@string/auto"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_nyt_mode"
            app:key="theme_mode"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:icon="@drawable/ic_language"
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:max="20"
            app:defaultValue="16"
            app:icon="@drawable/ic_font_size"
            app:key="font_size"
            app:min="14"
            app:showSeekBarValue="true"
            app:summary="@string/font_size_msg"
            app:title="@string/font_size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>