<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.online_ethio_gebeya.ui.fragments.HomeFragment"
        android:label="@string/lbl_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_settingsFragment"
            app:destination="@id/navigation_settings" />
    </fragment>

    <fragment
        android:id="@+id/navigation_carts"
        android:name="com.example.online_ethio_gebeya.ui.fragments.CartsFragment"
        android:label="@string/lbl_carts"
        tools:layout="@layout/fragment_carts" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.online_ethio_gebeya.ui.fragments.SettingsFragment"
        android:label="@string/lbl_settings" />
</navigation>