<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/app_margin"
    tools:context="ui.fragments.account.AccountDeleteFragment">

    <TextView
        android:id="@+id/attention_lbl"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:padding="5dp"
        android:text="@string/lbl_attention"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:padding="5dp"
        android:text="@string/lbl_attention_msg"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/attention_lbl" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/lbl_password"
        app:layout_constraintBottom_toTopOf="@id/confirm"
        app:layout_constraintTop_toBottomOf="@id/msg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm"
        style="@style/custom_un_elevated_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/lbl_delete"
        app:layout_constraintBottom_toTopOf="@id/cancel_button" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="15dp"
        android:text="@string/lbl_cancel"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/confirm"
        app:layout_constraintEnd_toEndOf="@+id/confirm"
        app:layout_constraintStart_toStartOf="@id/confirm"
        app:layout_constraintTop_toTopOf="@id/confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>