<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_margin"
    tools:context=".ui.fragments.RateFragment">

    <TextView
        android:id="@+id/rate"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/rate_this_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="5"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@color/surface"
        android:gravity="top|start"
        android:hint="@string/write_comment"
        android:inputType="textMultiLine"
        android:lines="10"
        android:overScrollMode="always"
        android:padding="10dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_value" />

    <Button
        android:id="@+id/submit_comment"
        style="@style/custom_un_elevated_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/submit_comment"
        app:layout_constraintEnd_toEndOf="@id/submit_comment"
        app:layout_constraintStart_toStartOf="@id/submit_comment"
        app:layout_constraintTop_toTopOf="@id/submit_comment" />
</androidx.constraintlayout.widget.ConstraintLayout>