<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="price"
            type="String" />

        <variable
            name="item"
            type="com.example.online_ethio_gebeya.models.Item" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="3dp"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_black"
                android:scaleType="centerCrop"
                android:text="@{item.product.name}"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@{String.valueOf(item.quantity)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name" />

            <TextView
                android:id="@+id/times_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/lbl_times"
                app:layout_constraintStart_toEndOf="@id/quantity"
                app:layout_constraintTop_toBottomOf="@id/product_name" />

            <TextView
                android:id="@+id/eachPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@{String.valueOf(item.product.price)}"
                app:layout_constraintStart_toEndOf="@id/times_icon"
                app:layout_constraintTop_toBottomOf="@id/product_name" />

            <TextView
                android:id="@+id/eqlSign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/lbl_eql"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@id/total"
                app:layout_constraintStart_toEndOf="@id/eachPrice"
                app:layout_constraintTop_toBottomOf="@id/product_name" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/app_margin"
                android:padding="10dp"
                app:attachTotalPrice="@{item}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
